--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TUCOY</title>
+    <title>TucoySite</title>
 </head>
 <body>
-    WELCOME TO MY SITE!
+    
+    <a href="https://devtucoy.github.io/Spritesheet-to-Images/">
+        <input type="button" value="Visit Tool" />
+     </a>
+
+
 </body>
 </html>
